--- a/src/app/components/headlines-tab/headlinesTab.component.html
+++ b/src/app/components/headlines-tab/headlinesTab.component.html
@@ -1,10 +1,14 @@
 <md-tab-group>
   <md-tab label="Headlines">
-    <div class = "headlines-wrapper">
+    <div class="headlines-wrapper tab-wrapper">
       <left-bar class="lb"></left-bar>
       <news-bar class="nb"></news-bar>
       <right-bar class="rb"></right-bar>
     </div>
   </md-tab>
-  <md-tab label="For you" class="for-you tab">Content 2</md-tab>
+  <md-tab label="For you" class="for-you tab">
+    <div class="for-you-wrapper tab-wrapper">
+      <news-bar class="nb"></news-bar>
+    </div>
+  </md-tab>
 </md-tab-group>
