--- a/src/app/components/headlines-tab/headlinesTab.component.css
+++ b/src/app/components/headlines-tab/headlinesTab.component.css
@@ -1,3 +1,8 @@
+/deep/.mat-tab-labels {
+  display: flex;
+  justify-content: center !important;
+}
+
 .rb, .lb {
   border-style:solid;
   width: 20%;
@@ -8,11 +13,10 @@
   width: 40%;
 }
 
-.headlines-wrapper {
+.tab-wrapper {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
 }
-
 
