--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -7,7 +7,8 @@
     </md-list-item>
   </ng-container>
 
-  <ng-container *ngIf="isNewsBar">
+  <!-- NEWS BAR MATERIAL -->
+  <!-- <ng-container *ngIf="isNewsBar">
     <md-list-item class="news-card" *ngFor='let item of list'>
       <div class="news-card-left-part">
         <img class="images" src="{{item.img}}">
@@ -17,13 +18,12 @@
         <p>{{item.content.substr(0, 500)}}</p>
       </div>
     </md-list-item>
-  </ng-container>
+  </ng-container> -->
 
   <ng-container *ngIf="isRightBar">
     <md-list-item *ngFor='let item of list'>
       <h3 mdLine>{{item.text}}</h3>
     </md-list-item>
   </ng-container>
-
 
 </md-list>
