--- a/src/app/components/news-bar/newsBar.component.html
+++ b/src/app/components/news-bar/newsBar.component.html
@@ -1,10 +1,13 @@
-<list-component [isNewsBar]="true" [list]="list"></list-component>
-<!-- <div class="news-bar-item" *ngFor="let item of list">
-  <div class="news-card-left-part">
+<!-- <list-component [isNewsBar]="true" [list]="list"></list-component> -->
+<div class="news-bar-item" *ngFor="let item of list">
+  <div class="news-card-left-bar">
     <img class="images" src="{{item.img}}">
+    <div class="news-card-left-bar-tags">
+        <a md-raised-button routerLink="." *ngFor="let tags of item.tags">{{tags}}</a>
+    </div>
   </div>
-  <div class="news-card-right-part">
+  <div class="news-card-right-bar">
     <h3>{{item.title}}</h3>
     <p>{{item.content.substr(0, 500)}}</p>
   </div>
-</div> -->
+</div>
