--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,19 @@
-#header {
-  width:100%;
+.header {
+  width: 100%;
+  min-height: 120px;
+
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+
+  background-color: #fff;
+  box-shadow: 0 3px 9px 0 rgba(0,0,0,0.10), 0 0 0 1px rgba(0,0,0,0.04);
+  z-index: 100;
+
 }
 
 .ht {
   width: 100%;
   justify-content: center;
 }
+
