--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,10 +1,27 @@
-#header {
-  width: 100%;
-  height: 150px;
-  background-color: #B0BEC5;
+.header {
+  /* height: 100%; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
-#profile-button {
-  float: right;
-  margin: 20px 20px 0 0;
+.header-logo-container {
+  margin-left: 8%;
+  width: 20%;
+  height: 120px;
 }
+.header-logo {
+  margin-top: calc((120px - 60px) / 2);
+  height: 50%;
+}
+
+.header-search-bar {
+  width: 40%;
+  margin-left: 2%;
+}
+
+.profile-button {
+  margin: 0 0 0 23.5%;
+}
+
