--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,7 @@
-<div id='header'>
-  <button md-mini-fab color="warn" id='profile-button'>User</button>
+<div class="header">
+  <div class="header-logo-container">
+    <img src="../../../assets/logo-main.png" class="header-logo">
+  </div>
+  <search-bar class="header-search-bar"></search-bar>
+  <button md-mini-fab color="warn" class="profile-button">User</button>
 </div>
